[LTApp][LTKit] LocationService reworked to operate with raw CLRegion instead of Area. Area now serves as compound structure encompassing region and wifi name. Corresponding monitoring scene changes.

--- a/LTApp/App/Resources/Base.lproj/Main.storyboard
+++ b/LTApp/App/Resources/Base.lproj/Main.storyboard
@@ -46,10 +46,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                                 <subviews>
                                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="XuH-0S-pFu">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="452"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="402"/>
                                     </mapView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="AlV-np-6Zs">
-                                        <rect key="frame" x="8" y="460" width="359" height="171"/>
+                                        <rect key="frame" x="8" y="410" width="359" height="221"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3At-gd-xks">
                                                 <rect key="frame" x="0.0" y="0.0" width="359" height="20.5"/>
@@ -109,14 +109,31 @@
                                                     <constraint firstItem="4sy-Ux-uKy" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="bYx-lm-i4g" secondAttribute="leading" constant="150" id="AVg-8M-yFq"/>
                                                 </constraints>
                                             </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Eil-hU-TzF">
+                                                <rect key="frame" x="0.0" y="90.5" width="359" height="30"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wi-Fi:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aeg-bE-WoH">
+                                                        <rect key="frame" x="0.0" y="0.0" width="45.5" height="30"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9WB-Wg-Z2f">
+                                                        <rect key="frame" x="55.5" y="0.0" width="303.5" height="30"/>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current status:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ot5-AB-SGU">
-                                                <rect key="frame" x="0.0" y="90.5" width="359" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="140.5" width="359" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VvJ-4P-85C">
-                                                <rect key="frame" x="0.0" y="131" width="359" height="40"/>
+                                                <rect key="frame" x="0.0" y="181" width="359" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="hwa-y4-D2O"/>
                                                 </constraints>
@@ -163,6 +180,7 @@
                         <outlet property="placeholderView" destination="1OK-Si-BPT" id="fvX-c5-9z1"/>
                         <outlet property="radiusLabel" destination="vhF-Al-UGv" id="wuR-J9-RZU"/>
                         <outlet property="radiusSlider" destination="3uZ-qz-gOS" id="oz3-Fu-m7p"/>
+                        <outlet property="wifiTextField" destination="9WB-Wg-Z2f" id="ttC-vt-Ksd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
